@@ -60,6 +60,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
+                        --add-opens java.base/java.util=eu.javaspecialists.books.dynamicproxies
                         --add-opens java.base/java.lang=eu.javaspecialists.books.dynamicproxies
                         --add-reads eu.javaspecialists.books.dynamicproxies=java.sql
                     </argLine>
